--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "receipts",
   "description": "A servlet to send receipts to printer or sms.",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "Khosi Morafo @khosimorafo",
   "bin": {
     "receipts": "./bin/run"
@@ -12,8 +12,11 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "dotenv": "^8.2.0",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "mocha": "^7.1.1",
     "mongoose": "^5.9.7",
+    "path": "^0.12.7",
     "tslib": "^1",
     "twilio": "^3.42.1"
   },
@@ -22,19 +25,24 @@
     "@oclif/test": "^1",
     "@types/chai": "^4.2.11",
     "@types/express": "^4.17.6",
+    "@types/fs-extra": "^8.1.0",
     "@types/mocha": "^5.2.7",
     "@types/mongoose": "^5.7.10",
     "@types/node": "^10.17.19",
+    "@types/shelljs": "^0.8.7",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
     "eslint-plugin-import": "^2.20.2",
+    "fs-extra": "^9.0.0",
     "globby": "^10",
-    "mocha": "^5.2.0",
     "nodemon": "^2.0.3",
+    "npm-run-all": "^4.1.5",
     "nyc": "^14",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.3",
     "supertest": "^4.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
@@ -68,11 +76,17 @@
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md",
-    "start": "tsc && nodemon ",
-    "start:watch": "nodemon",
-    "build": "tsc",
-    "dev": "nodemon src/index.ts",
-    "test-dev": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register test/**/*.test.ts\""
+    "clean": "rimraf lib/*",
+    "copy-assets": "ts-node src/tools/assets",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "tsc": "tsc",
+    "build": "npm-run-all clean tsc copy-assets",
+    "build:deploy": "npm-run-all build deploy",
+    "dev": "nodemon --watch src -e ts,ejs --exec npm run build:deploy",
+    "test-dev": "nodemon --watch . --ext ts,ejs --exec \"mocha -r ts-node/register test/**/*.test.ts\"",
+    "deploy": "node lib/index.js",
+    "start": "npm run build:deploy",
+    "start:watch": "nodemon"
   },
   "types": "lib/index.d.ts"
 }
