--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/shelljs": "^0.8.7",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
@@ -72,7 +73,6 @@
   "repository": "khosimorafo/receipts",
   "scripts": {
     "postpack": "rm -f oclif.manifest.json",
-    "posttest": "eslint . --ext .ts --config .eslintrc",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
     "test": "nyc --extension .ts mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md",
@@ -83,7 +83,6 @@
     "build": "npm-run-all clean tsc copy-assets",
     "build:deploy": "npm-run-all build deploy",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run build:deploy",
-    "test:dev": "mocha -r ts-node/register test/**/*.test.ts",
     "deploy": "node lib/index.js",
     "start": "npm run build:deploy",
     "start:watch": "nodemon"
