--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "strict": true,
     "target": "es2017"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "test/index.ts"],
   "exclude": ["node_modules", ".vscode"]
 }
