--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-ACCOUNT_SID=AC20cb4aa2ab19e03814b873870dedc3b6
-AUTH_TOKEN=7c27f04cd13fa62f477e301cead277f1
-TWILIO_NUMBER=12564019237
 PORT=3001
+PROJECT_ID=485921541403
